Dodata forma kreiraj partnera

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Seminarski-Klijent/nbproject/private/
 /Seminarski-Zajednicki/nbproject/private/
 /Seminarski-Server/nbproject/private/
+/Seminarski-Klijent/build/
