dodate klase OpstiDomenskiObjekat i Partner

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Seminarski-Zajednicki/nbproject/private/
 /Seminarski-Server/nbproject/private/
 /Seminarski-Klijent/build/
+/Seminarski-Zajednicki/build/
