--- a/Seminarski-Klijent/nbproject/project.properties
+++ b/Seminarski-Klijent/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Seminarski-Klijent
 endorsed.classpath=
 excludes=
+file.reference.Seminarski-Zajednicki.jar=..\\Seminarski-Zajednicki\\dist\\Seminarski-Zajednicki.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -50,7 +51,8 @@ javac.source=20
 javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.Seminarski-Zajednicki.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
