--- a/Seminarski-Server/nbproject/project.properties
+++ b/Seminarski-Server/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Seminarski-Server
 excludes=
+file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\Danilo\\Desktop\\Projektovanje softvera\\mysql-connector-java-8.0.12.jar
+file.reference.Seminarski-Zajednicki.jar=..\\Seminarski-Zajednicki\\dist\\Seminarski-Zajednicki.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Seminarski-Zajednicki.jar}:\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
