Implementirana SO Zapamti partnera
Kreiran Opsti kontroler korisnickog interfejsa i njegova implementacija KontrolerKIPartner, odradjena logika i testovi koriscenja

--- a/Seminarski-Klijent/nbproject/project.properties
+++ b/Seminarski-Klijent/nbproject/project.properties
@@ -38,7 +38,8 @@ excludes=
 file.reference.Seminarski-Zajednicki.jar=..\\Seminarski-Zajednicki\\dist\\Seminarski-Zajednicki.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Seminarski-Zajednicki.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
