--- a/Seminarski-Server/nbproject/project.properties
+++ b/Seminarski-Server/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Seminarski-Server
-main.class=
+main.class=forme.ServerskaForma
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
