Poboljsane performanse ModelTabeleZadatma

--- a/Seminarski-Server/nbproject/project.properties
+++ b/Seminarski-Server/nbproject/project.properties
@@ -1,11 +1,12 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Seminarski-Server
+application.vendor=Danilo
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
+build.classes.excludes=**/*.java,**/*.form,**/*.properties
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Seminarski-Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Seminarski-Server
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\Danilo\\Desktop\\Projektovanje softvera\\mysql-connector-java-8.0.12.jar
 file.reference.Seminarski-Zajednicki.jar=..\\Seminarski-Zajednicki\\dist\\Seminarski-Zajednicki.jar
