Dodat JUnit u projekat

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Seminarski-Server/build/
 /Seminarski-Server/dist/
 /Seminarski-Klijent/dist/
+/ZavrsniRadPrimeri/nbproject/private/
+/ZavrsniRadPrimeri/build/
