--- a/Seminarski-Server/nbproject/project.properties
+++ b/Seminarski-Server/nbproject/project.properties
@@ -35,13 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Seminarski-Server
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=..\\hamcrest-core-1.3.jar
+file.reference.junit-4.13.2.jar=..\\junit-4.13.2.jar
 file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\Danilo\\Desktop\\Projektovanje softvera\\mysql-connector-java-8.0.12.jar
 file.reference.Seminarski-Zajednicki.jar=..\\Seminarski-Zajednicki\\dist\\Seminarski-Zajednicki.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Seminarski-Zajednicki.jar}:\
-    ${file.reference.mysql-connector-java-8.0.12.jar}
+    ${file.reference.mysql-connector-java-8.0.12.jar}:\
+    ${file.reference.junit-4.13.2.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +58,8 @@ javac.source=20
 javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
@@ -67,6 +72,8 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.hamcrest-core-1.3.jar=../hamcrest-core-1.3-javadoc.jar
+javadoc.reference.junit-4.13.2.jar=../junit-4.13.2-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
